--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="strict.lib/ca.usask.cs.srlab.pagerank.jar"/>
+	<classpathentry kind="lib" path="strict.lib/ca.usask.cs.srlab.query-difficulty.jar"/>
 	<classpathentry kind="lib" path="strict.lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="strict.lib/commons-lang3-3.2.jar"/>
 	<classpathentry kind="lib" path="strict.lib/commons-math3-3.6.1.jar"/>
@@ -14,14 +19,16 @@
 	<classpathentry kind="lib" path="strict.lib/joda-time.jar"/>
 	<classpathentry kind="lib" path="strict.lib/jollyday.jar"/>
 	<classpathentry kind="lib" path="strict.lib/jsoup-1.7.2.jar"/>
+	<classpathentry kind="lib" path="strict.lib/lucene-analyzers-common-6.2.0.jar"/>
 	<classpathentry kind="lib" path="strict.lib/lucene-codecs-6.2.0.jar"/>
 	<classpathentry kind="lib" path="strict.lib/lucene-core-6.2.0.jar"/>
 	<classpathentry kind="lib" path="strict.lib/lucene-queries-6.2.0.jar"/>
 	<classpathentry kind="lib" path="strict.lib/lucene-queryparser-6.2.0.jar"/>
 	<classpathentry kind="lib" path="strict.lib/slf4j-api-1.7.17.jar"/>
+	<classpathentry kind="lib" path="strict.lib/stanford-postagger-3.9.2.jar"/>
 	<classpathentry kind="lib" path="strict.lib/weka.jar"/>
 	<classpathentry kind="lib" path="strict.lib/xom.jar"/>
-	<classpathentry kind="lib" path="strict.lib/stanford-postagger-3.9.2.jar"/>
-	<classpathentry kind="lib" path="strict.lib/ca.usask.cs.srlab.query-difficulty.jar"/>
+	<classpathentry kind="lib" path="strict.lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="strict.lib/junit-4.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
