--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="strict.lib/ca.usask.cs.srlab.pagerank.jar"/>
-	<classpathentry kind="lib" path="strict.lib/ca.usask.cs.srlab.query-difficulty.jar"/>
 	<classpathentry kind="lib" path="strict.lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="strict.lib/commons-lang3-3.2.jar"/>
 	<classpathentry kind="lib" path="strict.lib/commons-math3-3.6.1.jar"/>
@@ -26,9 +25,11 @@
 	<classpathentry kind="lib" path="strict.lib/lucene-queryparser-6.2.0.jar"/>
 	<classpathentry kind="lib" path="strict.lib/slf4j-api-1.7.17.jar"/>
 	<classpathentry kind="lib" path="strict.lib/stanford-postagger-3.9.2.jar"/>
-	<classpathentry kind="lib" path="strict.lib/weka.jar"/>
 	<classpathentry kind="lib" path="strict.lib/xom.jar"/>
 	<classpathentry kind="lib" path="strict.lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="strict.lib/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="strict.lib/ca.usask.cs.srlab.query-difficulty.jar"/>
+	<classpathentry kind="lib" path="strict.lib/weka.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
